RESOLVED FIXED201577
performJITMemcpy() source buffer should not be in the Gigacage.
https://bugs.webkit.org/show_bug.cgi?id=201577
Summary performJITMemcpy() source buffer should not be in the Gigacage.
Mark Lam
Reported 2019-09-07 02:06:11 PDT
...
Attachments
proposed patch. (6.24 KB, patch)
2019-09-07 02:16 PDT, Mark Lam
no flags
proposed patch. (6.24 KB, patch)
2019-09-07 03:31 PDT, Mark Lam
msaboff: review+
Radar WebKit Bug Importer
Comment 1 2019-09-07 02:06:45 PDT
Mark Lam
Comment 2 2019-09-07 02:16:34 PDT
Created attachment 378287 [details] proposed patch. Let's try this on the EWS first.
Mark Lam
Comment 3 2019-09-07 03:31:32 PDT
Created attachment 378290 [details] proposed patch.
Michael Saboff
Comment 4 2019-09-07 07:00:01 PDT
Comment on attachment 378290 [details] proposed patch. r=me
Mark Lam
Comment 5 2019-09-07 08:03:00 PDT
Thanks for the review. Landed in r249613: <http://trac.webkit.org/r249613>.
Note You need to log in before you can comment on or make changes to this bug.