performJITMemcpy() source buffer should not be in the Gigacage. https://bugs.webkit.org/show_bug.cgi?id=201577 <rdar://problem/55142606>

Reviewed by Michael Saboff.

Source/bmalloc:

1. Add the Gigacage start address and totalSize to the Config.
2. Add a contains() function that uses the start address and totalSize to check
   if a given pointer is in the Gigacage's address range.

* bmalloc/Gigacage.cpp:
(Gigacage::ensureGigacage):
(Gigacage::verifyGigacageIsEnabled):
* bmalloc/Gigacage.h:
(Gigacage::contains):

Source/JavaScriptCore:

Add a RELEASE_ASSERT in performJITMemcpy() to ensure that the passed in source
buffer is not in the Gigacage.

* jit/ExecutableAllocator.h:
(JSC::performJITMemcpy):

Source/WTF:

* wtf/Gigacage.h:
(Gigacage::contains):



Canonical link: https://commits.webkit.org/215211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249613 268f45cc-cd09-0410-ab3c-d52691b4dbfc