Source/JavaScriptCore/jit/ExecutableAllocator.h
@@ -31,6 +31,7 @@
 #include <stddef.h> // for ptrdiff_t
 #include <limits>
 #include <wtf/Assertions.h>
+#include <wtf/Gigacage.h>
 #include <wtf/Lock.h>
 #include <wtf/MetaAllocatorHandle.h>
 #include <wtf/MetaAllocator.h>
@@ -124,6 +125,7 @@ extern JS_EXPORT_PRIVATE bool useFastPermisionsJITCopy;
 
 static ALWAYS_INLINE void* performJITMemcpy(void *dst, const void *src, size_t n)
 {
+    RELEASE_ASSERT(!Gigacage::contains(src));
 #if CPU(ARM64)
     static constexpr size_t instructionSize = sizeof(unsigned);
     RELEASE_ASSERT(roundUpToMultipleOf<instructionSize>(dst) == dst);
